{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 18,
  "lineage": "1df4abd9-961d-8fc3-4739-f7e5f63d7c8f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012fab93897be66b7",
            "domain": "vpc",
            "id": "eipalloc-012fab93897be66b7",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-35-73-209-105.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.73.209.105",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:internet-gateway/igw-08ffa66115aea2a01",
            "id": "igw-08ffa66115aea2a01",
            "owner_id": "706169056500",
            "tags": {
              "Environment": "production",
              "Name": "production-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-igw"
            },
            "vpc_id": "vpc-005307e6819d79969"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012fab93897be66b7",
            "connectivity_type": "public",
            "id": "nat-08506cd91a118b850",
            "network_interface_id": "eni-00407f3605eb67630",
            "private_ip": "10.0.0.162",
            "public_ip": "35.73.209.105",
            "subnet_id": "subnet-0ae0c79b5bd5deb42",
            "tags": {
              "Environment": "production",
              "Name": "production-ap-northeast-1a-nat"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-ap-northeast-1a-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ecd8746ab02adbb31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08506cd91a118b850",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ecd8746ab02adbb3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08ffa66115aea2a01",
            "id": "r-rtb-054ed41c4abb02d651080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-054ed41c4abb02d65",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:route-table/rtb-0ecd8746ab02adbb3",
            "id": "rtb-0ecd8746ab02adbb3",
            "owner_id": "706169056500",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "production-private-route-table"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-005307e6819d79969"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:route-table/rtb-054ed41c4abb02d65",
            "id": "rtb-054ed41c4abb02d65",
            "owner_id": "706169056500",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "production-public-route-table"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-005307e6819d79969"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce18176284e72123",
            "route_table_id": "rtb-0ecd8746ab02adbb3",
            "subnet_id": "subnet-0157385f7f16bf9fa"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5d56abb5770f632",
            "route_table_id": "rtb-0ecd8746ab02adbb3",
            "subnet_id": "subnet-07e6e2281473a2228"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e8261902925428a",
            "route_table_id": "rtb-054ed41c4abb02d65",
            "subnet_id": "subnet-0ae0c79b5bd5deb42"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07968f2b3f465242f",
            "route_table_id": "rtb-054ed41c4abb02d65",
            "subnet_id": "subnet-004f98433b280913f"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:security-group/sg-0f359299d7b18bb29",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0f359299d7b18bb29",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "production-default-sg",
            "name_prefix": "",
            "owner_id": "706169056500",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "timeouts": null,
            "vpc_id": "vpc-005307e6819d79969"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:subnet/subnet-0157385f7f16bf9fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0157385f7f16bf9fa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "706169056500",
            "tags": {
              "Environment": "production",
              "Name": "production-ap-northeast-1a-private-subnet"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-ap-northeast-1a-private-subnet"
            },
            "vpc_id": "vpc-005307e6819d79969"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:subnet/subnet-07e6e2281473a2228",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-07e6e2281473a2228",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "706169056500",
            "tags": {
              "Environment": "production",
              "Name": "production-ap-northeast-1c-private-subnet"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-ap-northeast-1c-private-subnet"
            },
            "vpc_id": "vpc-005307e6819d79969"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:subnet/subnet-0ae0c79b5bd5deb42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0ae0c79b5bd5deb42",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "706169056500",
            "tags": {
              "Environment": "production",
              "Name": "production-ap-northeast-1a-public-subnet"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-ap-northeast-1a-public-subnet"
            },
            "vpc_id": "vpc-005307e6819d79969"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:subnet/subnet-004f98433b280913f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-004f98433b280913f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "706169056500",
            "tags": {
              "Environment": "production",
              "Name": "production-ap-northeast-1c-public-subnet"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-ap-northeast-1c-public-subnet"
            },
            "vpc_id": "vpc-005307e6819d79969"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:706169056500:vpc/vpc-005307e6819d79969",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/21",
            "default_network_acl_id": "acl-02a13a69bd4b8a84b",
            "default_route_table_id": "rtb-048472c5be112e3b3",
            "default_security_group_id": "sg-0db76d7e4fafb0f91",
            "dhcp_options_id": "dopt-a13631c6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-005307e6819d79969",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-048472c5be112e3b3",
            "owner_id": "706169056500",
            "tags": {
              "Environment": "production",
              "Name": "production-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-vpc"
            }
          }
        }
      ]
    }
  ]
}